# ai4energy

./: .gitignore  README.md  pyproject.toml  sanity_day_ahead.py  sanity_intra_day.py
bash_scripts/training/: simvp_slurm.sh
datasets/: folsom.py  folsom_day_ahead.py  folsom_intra_day.py  folsom_intra_hour.py  lightning.py
evaluation/: day_ahead.csv  dni_day_ahead.csv  dni_intra_day.csv  dni_intra_hour.csv  evaluation.py  ghi_day_ahead.csv  ghi_intra_day.csv  ghi_intra_hour.csv  yuan_model_dni_intra_hour.csv  yuan_model_ghi_intra_hour.csv
inference/: eval_folsom.py
models/: __init__.py  day_ahead_model.py  intar_hour_model.py  intra_day_model.py  intra_hour_model.py  lightning_interface.py  pvinsight.py  xgb_utils.py
original_scripts/: Forecast_day-ahead.py
preprocessing/: image_resize.py
test/: test_folsom_intra_day.py
training/: callbacks.py  evaluate.py  evaluate_day_ahead.py  train.py  train_folsom_intra_day.py  train_folsom_intra_day_xgb.py  training_folsom.py  training_folsom_mgpu.py
